--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <% if user_signed_in? %>
     <%= current_user.username %>
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <%= link_to "Leaderboards", "/leaderboards" %>
     <% else %>
     <%= link_to "Sign In", new_user_session_path %>
     <% end %>
