--- a/app/views/questions/congratulations.html.erb
+++ b/app/views/questions/congratulations.html.erb
@@ -1,1 +1,5 @@
-<div>You Completed the challenge.</div>
+<div class="container">
+  <h1 style=" font-family: 'Alegreya', sans-serif; font-size: 3rem;" >Congratulations</h1>
+  <hr class="line">
+  <div class="rule" style="font-size: 2.5rem;">You Completed the challenge.</div>
+</div>
