--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,103 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= stub "active_admin"
  *= require_self
  */
+* {
+  box-sizing: border-box;
+}
+html, body {
+  padding: 0;
+  margin: 0;
+}
+ .header {
+   padding: 4px;
+   height: 10vh;
+   background-color: #ffe0bd;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-bottom: 10px;
+   min-width: 900px;
+ }
+
+ .logo {
+   font-family: 'Play', sans-serif;
+   flex-basis: 500px;
+   font-size: 3.5rem;
+   margin-left: 5%;
+   text-transform: uppercase;
+ }
+
+ .nav {
+   width: 300px;
+   display: flex;
+   justify-content: space-around;
+   margin-right: 5%;
+ }
+
+ #username {
+   flex: 1;
+   font-family: 'Alegreya', sans-serif;
+   align-self: center;
+   font-size: 1.5rem;
+   font-weight: bold;
+   text-align: center;
+ }
+
+ .container {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: #ffcd94;
+   margin: 0 10px;
+   border-radius: 5px;
+   height: 87vh;
+   padding-bottom: 80px;
+   min-width: 900px;
+ }
+
+
+ .buttons {
+   flex: 2;
+   display: flex;
+ }
+
+ .button{
+  background-color: #7f5630;
+  color: white;
+  height: 30px;
+  padding: 7px;
+  border-radius: 15px;
+ }
+
+ .login-container {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   background-color: #ffcd94;
+   margin: 1vh 1vh;
+   border-radius: 5px;
+   height: 97vh;
+   min-width: 900px;
+ }
+
+ .login-form {
+   width: 25%;
+   border-radius: 15px;
+   background-color: rgba(255,255,255, 0.4);
+   display: flex;
+   height: 70vh;
+   flex-direction: column;
+   align-items: center;
+   margin: auto auto;
+ }
+
+.form-line {
+  width: 1px;
+  height: 100%;
+  background-color: white;
+}
