--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,28 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Alegreya:400,700|Play:400,700|Gabriela:400,700' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-      <% if user_signed_in? %>
-      <%= current_user.username %>
-      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-      <%= link_to "Leaderboards", "/leaderboards" %>
-      <% else %>
-      <%= link_to "Sign In", new_user_session_path %>
-      <% end %>
+    <div class= "header">
+      <div class="logo">Cryptex</div>
+      <div class="nav">
+        <% if user_signed_in? %>
+          <div id="username"><%= current_user.username %></div>
+          <div class="buttons">
+            <%= button_to "Leaderboards", "/leaderboards",method: :get, class: "button" %>
+            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "button" %>
+            <% if params[:controller] == "users" %>
+              <%= button_to "Play", {controller: :users, action: :play},method: :get, class: "button play" %>
+            <% end %>
+            <% else %>
+            <%= button_to "Sign In", new_user_session_path, method: :get , class: "button" %>
+            <% end %>
+          </div>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
