--- a/app/views/questions/congratulations.html.erb
+++ b/app/views/questions/congratulations.html.erb
@@ -2,4 +2,5 @@
   <h1 style=" font-family: 'Alegreya', sans-serif; font-size: 3rem;" >Congratulations</h1>
   <hr class="line">
   <div class="rule" style="font-size: 2.5rem;">You Completed the challenge.</div>
+  <div class="rule" style="font-size: 2.5rem;">Your Rank: <%= current_user.rank %></div>  
 </div>
