--- a/app/views/devise/shared/_sign_in.html.erb
+++ b/app/views/devise/shared/_sign_in.html.erb
@@ -1,8 +1,8 @@
 <h2>Log in</h2>
     <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
       <div class="field">
-        <%= f.label "Login" %><br />
-        <%= f.email_field :email, autofocus: true %>
+          <%= f.label :login %><br />
+          <%= f.text_field :login %>
       </div>
 
       <div class="field">
